--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "boff",
   "version": "1.0.0",
   "description": "Official website for the Brooklyn Outdoor Film Festival",
-  "main": "index.js",
   "author": "Antony Padayattil",
   "license": "MIT",
   "dependencies": {
@@ -14,8 +13,9 @@
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2"
   },
+  "main": "src/index.js",
   "scripts": {
-    "start": "bla",
+    "start": "webpack --config webpack.config.js",
     "build": "bla bla"
   }
 }
