build process ready

--- a/package.json
+++ b/package.json
@@ -10,12 +10,18 @@
     "popper.js": "^1.14.3"
   },
   "devDependencies": {
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.4.4",
+    "style-loader": "^0.23.1",
     "webpack": "^4.23.1",
-    "webpack-cli": "^3.1.2"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   },
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js",
-    "build": "bla bla"
+    "start": "webpack-dev-server --mode development --host 0.0.0.0 --port 8080",
+    "build": "webpack --mode=production --config webpack.config.js"
   }
 }
