--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   },
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --host 0.0.0.0 --port 8080",
+    "start": "webpack-dev-server --mode development --hot --watch-content-base --host 0.0.0.0 --port 8080",
     "build": "webpack --mode=production --config webpack.config.js"
   }
 }
