--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "material-icons": "^0.2.3",
     "popper.js": "^1.14.3"
